# mrs_serial

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  nodelets.xml  package.xml  plugins.xml
.ci/: ci_before_install.sh  install.sh
.github/workflows/: ros_package_build.yml  ros_package_build_with_docker.yml  ros_package_build_with_docker_amd64.yml
config/: estop.yaml  garmin_rangefinder.yaml  gimbal.cfg  gimbal.yaml  imu_default.yaml  mrs_serial.yaml  plotjuggler.xml  vio_imu.yaml
include/: baca_protocol.h  gimbal.hpp  gimbal_mavlink.h  serial_port.h  vio_imu.h
include/SBGC_lib/: SBGC.h
include/SBGC_lib/include/: SBGC_cmd_helpers.h  SBGC_command.h  SBGC_parser.h
include/garmin/: garmin.h  serial_port.h
include/mrs_serial/: serial_port.h
install/udev/: 52-bluefox-imu.rules
launch/: blanket_claw.launch  darpa.launch  eagle.launch  estop.launch  gimbal.launch  gripper.launch  imu.launch  light.launch  parachute.launch  rtk.launch  servo.launch  sonar.launch  tarot_gimbal.launch  test.launch  uav.launch  ultrasound.launch  vio.launch  vio_imu.launch  vio_imu.launch.py
rviz/: gimbal.rviz
scripts/: check_gimbal_quaternions.sh  moving_average.lua
src/: VoImu.cpp  baca_protocol.cpp  eagle.cpp  estop.cpp  garmin.cpp  gimbal.cpp  gimbal_mavlink.cpp  led.cpp  mrs_serial.cpp  mrs_serial_rtk.cpp  nmea_parser.cpp  serial_port.cpp  servo.cpp  tarot_gimbal.cpp  ultrasound.cpp  vio_imu.cpp  vio_imu_node.cpp
src/SBGC_lib/: SBGC_cmd_helpers.cpp
tmux_scripts/: .tmuxinator.yml  layout.json  session.yml
