<?xml version="1.0"?>
<package format="2">

  <name>mrs_serial</name>
  <version>0.0.1</version>
  <description>driver for reading messages from serial line</description>

  <maintainer email="hertdani@fel.cvut.cz">Daniel Hert</maintainer>
  <maintainer email="Tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>MIT</license>

  <author email="hertdani@fel.cvut.cz">Daniel Hert</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>mrs_msgs</depend>

  <export>

    <!-- The plugins.xml file defines nodelet as a plugin -->
    <nodelet plugin="${prefix}/plugins.xml" />

  </export>

</package>
